--- a/public/stylesheets/wrapper.css
+++ b/public/stylesheets/wrapper.css
@@ -15,7 +15,8 @@
     width: 98%; }
   #wrapper #main-content {
     float: left;
-    padding: 0; }
+    padding: 0;
+    width: 68%; }
     #wrapper #main-content #align {
       padding: 20px 0 0 20px; }
       #wrapper #main-content #align .bloc {
